--- a/1.1章节 使用console.log().md
+++ b/1.1章节 使用console.log().md
@@ -12,7 +12,7 @@
 
 console.log("Hello, World!");
 
-会将以下内容到记录到控制台：
+会将以下内容记录到控制台：
 
 ![96fb7d9df85515286b164cead0745107.png](evernotecid://015A5C34-BDDE-4E58-BBF2-4A930BE0FE05/appyinxiangcom/17053698/ENResource/p16221)
 
@@ -44,7 +44,7 @@ console.log("thisVar:", thisVar, "and thatVar:", thatVar);
 
 ##### 占位符
 
-可以与占位符结合使用console.log()
+console.log()可以与占位符结合使用
 
 ```javascript
 var greet = "Hello", who = "World";
